<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lgtGray"
    android:orientation="vertical"
    tools:context=".Activity.InsertNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/notesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_txt_bg"
            android:padding="15dp"
            android:hint="@string/title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:autofillHints=""
            android:inputType="" />

        <EditText
            android:id="@+id/notesSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_txt_bg"
            android:padding="15dp"
            android:hint="@string/subtitle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:autofillHints=""
            android:inputType="" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/priority"
                android:textSize="25sp"
                android:textColor="@color/black"
                />

            <ImageView
                android:id="@+id/greenPriority"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_baseline_done_24"
                android:background="@drawable/green_shape"
                android:contentDescription="@string/todo02" />
            <ImageView
                android:id="@+id/yellowPriority"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/yellow_shape"
                android:contentDescription="@string/td2" />
            <ImageView
                android:id="@+id/redPriority"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/red_shape"
                android:contentDescription="@string/td" />

        </LinearLayout>
        <EditText
            android:id="@+id/notesData"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_txt_bg"
            android:padding="15dp"
            android:hint="@string/notes"
            android:gravity="start"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="25sp"
            android:autofillHints=""
            android:inputType="" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/doneNotesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/lgtRed"
        android:contentDescription="@string/todo04"
        android:src="@drawable/ic_baseline_done_24" />

</RelativeLayout>